[package]
name = "db-cluster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
clap_complete = "4.1.4"
config = { path = "libs/config"}

[[bin]]
name = "dbctl"
path = "src/dbctl/main.rs"

[[bin]]
name = "dbserver"
path = "src/dbserver/main.rs"

[workspace]
members = [
    "core/db-cluster-daemon",
    "libs/auth",
    "libs/config",
]
