[package]
version = "0.1.0"
name = "db-cluster"
description = "TBA"
authors = ["Tobias Zimmermann <tobias.zimmer007@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tobias-z/db-cluster"
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
clap_complete = "4.1.5"
config = { path = "libs/config"}
daemon = { path = "core/daemon"}

[[bin]]
name = "dbctl"
path = "src/dbctl/main.rs"

[[bin]]
name = "dbserver"
path = "src/dbserver/main.rs"

[[bin]]
name = "db-cluster-daemon"
path = "src/db-cluster-daemon/main.rs"

[workspace]
members = [
    "core/daemon",
    "libs/auth",
    "libs/config",
]
