[package]
name = "db_cluster_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.3"
prost = "0.11.8"
tokio = { version = "1.26.0", features = ["full"] }
lib-auth = { path = "../lib-auth" }

[build-dependencies]
tonic-build = "0.8.4"
