[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth = { path = "../../libs/auth" }
tonic = "0.8.3"
prost = "0.11.8"
tokio = { version = "1.26.0", features = ["full"] }
crossbeam-channel = "0.5.7"
async-trait = "0.1.66"
hyperlocal = "0.8.0"
hyper = "0.14.25"

[build-dependencies]
tonic-build = "0.8.4"
